--- a/ui/layout/lHeader.html
+++ b/ui/layout/lHeader.html
@@ -2,15 +2,15 @@
     <div class="cell-12-marg0 padd-15 color-info bg-yin border-bottom-5px">
         <a href="index.php" class="dis-block" title="Vers l'accueil">
             <h2 class="marg-0 color-yang">Mini Journal</h2>
-            <span>Projet pour réalser un mini framework php</span>
+            <span>Projet pour réaliser un mini framework php</span>
         </a>
     </div>
     <div class="cell-12-marg0 padd-15 msg-info">
         <ul class="list-unstyled list-inline">
             <li><a href="index.php" title="Lien vers la liste des articles">Liste des articles</a></li>
-            <li><a href="index.php?a=new" title="Lien vers le formulaire pour ajouter un article">Ajouter un article</a></li>
+            <li><a href="index.php?a=insert&obj=article" title="Lien vers le formulaire pour ajouter un article">Ajouter un article</a></li>
             <!--<li><a href="index.php?a=update" title="Lien vers le formulaire pour modifier un article">Modifier un article</a></li>-->
-            <li><a href="index.php?a=delete" title="Lien vers le formulaire pour supprimer un article">Supprimer un article</a></li>
+            <li><a href="index.php?a=delete&obj=article" title="Lien vers le formulaire pour supprimer un article">Supprimer un article</a></li>
         </ul>
     </div>
 </header>
