flash session amelioree et integree

--- a/app/MagicMonkey/MiniJournal/Article/views/vAllArticles.html
+++ b/app/MagicMonkey/MiniJournal/Article/views/vAllArticles.html
@@ -1,4 +1,4 @@
-<?= $this->showMsg(); ?>
+<!-- $this->showMsg();-->
 <div class="row">
     <div class="cell-12">
         <h1 class="txt-skinny">Liste des articles</h1>
