--- a/app/MagicMonkey/MiniJournal/Article/views/vOneArticle.html
+++ b/app/MagicMonkey/MiniJournal/Article/views/vOneArticle.html
@@ -1,4 +1,4 @@
-<?= $this->showMsg(); ?>
+<!-- $this->showMsg(); -->
 <article>
     <div class="row-col-reverse-s flex-vertical-center align-center-s">
         <div class="cell-8">
@@ -8,7 +8,7 @@
             </h1>
         </div>
         <div class="cell-4 align-right">
-            <a class="color-warning marg-15-right" href="index.php?a=update&id=<?= $article->getId(); ?>"
+            <a class="color-orange marg-15-right" href="index.php?a=update&id=<?= $article->getId(); ?>"
                title="Modifier cet article">Modifier</a>
             <a class="color-error marg-15-right" href="index.php?a=delete&id=<?= $article->getId(); ?>"
                title="Supprimer cet article">Supprimer</a>
