--- a/app/MagicMonkey/MiniJournal/Article/views/vFormSelect.html
+++ b/app/MagicMonkey/MiniJournal/Article/views/vFormSelect.html
@@ -9,7 +9,7 @@
         <div class="groupform-large">
             <label class="required" for="article">Article </label>
             <?= $this->showMsg("errorArticle"); ?>
-            <select class="padd-15" name="article" id="article">
+            <select class="padd-15" name="article" id="article" required>
                 <?php
                     foreach($lst as $article)
                     {
