--- a/ui/layout/lBase.html
+++ b/ui/layout/lBase.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="JH">
+    <meta name="description" content="Mini Framework PHP">
     <meta name="author" content="Habit Jérémy">
     <!--<link rel="icon" type="image/x-icon" href="{{ asset('media/icon_logo/favicon.png') }}"/>-->
 
@@ -22,7 +22,10 @@
 
 <!--BODY START-->
 <main class="mw marg-auto padd-50-top-bottom padd-15-top-bottom-xs anim-zoom">
-    <?= $content;?>
+    <?php
+        $flash->All(array("success", "error", "warning", "info"));
+        echo $content;
+    ?>
 </main>
 
 <!--FOOTER START-->
