reorganisation httpfoundation pour request et responsse. param obj devient o

--- a/app/MagicMonkey/MiniJournal/Article/views/vAllArticles.html
+++ b/app/MagicMonkey/MiniJournal/Article/views/vAllArticles.html
@@ -10,7 +10,7 @@
 } else {
 foreach ($lst as $article) {
 echo "<a class='cell-4 padd-15 box-shad-2px align-center'
-         href='index.php?obj=article&a=describe&id=".$article->getId()."'>".$article->
+         href='index.php?o=article&a=describe&id=".$article->getId()."'>".$article->
     getTitle()."</a>";
 }
 } ?>
