--- a/app/MagicMonkey/MiniJournal/Article/views/vFormNewUpdate.html
+++ b/app/MagicMonkey/MiniJournal/Article/views/vFormNewUpdate.html
@@ -3,7 +3,7 @@
         <h1><?= $h1; ?></h1>
     </div>
 </div>
-<form class="row required" action="index.php?a=<?= $action; ?>&obj=article" method="post">
+<form class="row required" action="index.php?a=<?= $action; ?>&o=article" method="post">
     <div class="cell-12">
         <!-- author -->
         <div class="groupform-large">
