--- a/app/MagicMonkey/MiniJournal/Article/views/vOneArticle.html
+++ b/app/MagicMonkey/MiniJournal/Article/views/vOneArticle.html
@@ -3,7 +3,7 @@
     <div class="row-col-reverse-s flex-vertical-center align-center-s">
         <div class="cell-8">
             <h1 class="marg-0-bottom">
-                <a href="index.php?obj=article&a=describe&id=<?= $article->getId(); ?>"
+                <a href="index.php?o=article&a=describe&id=<?= $article->getId(); ?>"
                    title="<?= $article->getTitle(); ?>"><?= $article->getTitle(); ?></a>
             </h1>
         </div>
