--- a/ui/layout/lBase.html
+++ b/ui/layout/lBase.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Habit Jérémy">
     <!--<link rel="icon" type="image/x-icon" href="{{ asset('media/icon_logo/favicon.png') }}"/>-->
 
-    <title><?= $title;?></title>
+    <title><?= !empty($title) ? $title : ""; ?></title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="ui/css/libraries/normalize.min.css" type="text/css">
@@ -22,10 +22,8 @@
 
 <!--BODY START-->
 <main class="mw marg-auto padd-50-top-bottom padd-15-top-bottom-xs anim-zoom">
-    <?php
-        $flash->All(array("success", "error", "warning", "info"));
-        echo $content;
-    ?>
+    <?php $flash->all(array("success", "error", "warning", "info"));?>
+    <?= !empty($content) ? $content : ""; ?>
 </main>
 
 <!--FOOTER START-->
