--- a/ui/layout/lHeader.html
+++ b/ui/layout/lHeader.html
@@ -8,9 +8,9 @@
     <div class="cell-12-marg0 padd-15 msg-info">
         <ul class="list-unstyled list-inline">
             <li><a href="index.php" title="Lien vers la liste des articles">Liste des articles</a></li>
-            <li><a href="index.php?a=insert&obj=article" title="Lien vers le formulaire pour ajouter un article">Ajouter un article</a></li>
+            <li><a href="index.php?a=insert&o=article" title="Lien vers le formulaire pour ajouter un article">Ajouter un article</a></li>
             <!--<li><a href="index.php?a=update" title="Lien vers le formulaire pour modifier un article">Modifier un article</a></li>-->
-            <li><a href="index.php?a=delete&obj=article" title="Lien vers le formulaire pour supprimer un article">Supprimer un article</a></li>
+            <li><a href="index.php?a=delete&o=article" title="Lien vers le formulaire pour supprimer un article">Supprimer un article</a></li>
         </ul>
     </div>
 </header>
