--- a/ui/layout/lHeader.html.twig
+++ b/ui/layout/lHeader.html.twig
@@ -1,15 +1,10 @@
-<header class="row">
-    <div class="cell-12-marg0 padd-15 color-info bg-yin border-bottom-5px">
-        <a href="index.php" class="dis-block" title="Vers l'accueil">
-            <h2 class="marg-0 color-yang">Mini Journal</h2>
-            <span>Projet pour réaliser un mini framework php</span>
-        </a>
-    </div>
-    <div class="cell-12-marg0 padd-15 msg-info">
-        <ul class="list-unstyled list-inline">
-            <li><a href="index.php" title="Lien vers la liste des articles">Liste des articles</a></li>
-            <li><a href="index.php?a=insert&o=article" title="Lien vers le formulaire pour ajouter un article">Ajouter un article</a></li>
-            <li><a href="index.php?a=delete&o=article" title="Lien vers le formulaire pour supprimer un article">Supprimer un article</a></li>
-        </ul>
+<header>
+    <div class="row bg-peter-river">
+        <div class="cell-12 color-info">
+            <a href="index.php" class="dis-block color-yang" title="Vers l'accueil">
+                <span class="txt-sizeM dis-block">Mini Journal</span>
+                <span class="txt-skinny">Projet pour réaliser un mini framework php</span>
+            </a>
+        </div>
     </div>
 </header>
