--- a/ui/view/article/vAllArticles.html.twig
+++ b/ui/view/article/vAllArticles.html.twig
@@ -5,13 +5,13 @@
 {% block content %}
     <div class="row">
         <div class="cell-12">
-            <h1 class="txt-skinny">Liste des articles</h1>
+            <h1 class="align-center">Liste des articles</h1>
         </div>
     </div>
     <div class="row-col-s">
             {% if articles|length > 0 %}
                 {% for article in articles %}
-                    <a class="cell-4 padd-15 box-shad-2px align-center"
+                    <a class="cell-3 padd-15 box-shad-2px align-center hvr-bob"
                        href="index.php?o=article&a=describe&id={{ article.id }}">{{ article.title }}</a>
                 {% endfor %}
             {% else %}
