--- a/ui/view/article/vOneArticle.html.twig
+++ b/ui/view/article/vOneArticle.html.twig
@@ -36,8 +36,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="cell-12">
-                <p class="ckeContent">{{ article.content|raw }}</p>
+            <div class="cell-12 ckeContent">
+                {{ article.content|raw }}
             </div>
         </div>
     </article>
