--- a/ui/view/image/vOneImage.html.twig
+++ b/ui/view/image/vOneImage.html.twig
@@ -22,6 +22,9 @@
     </div>
     <div class="row">
         <div class="cell-12">
+            <p class="msg-info marg-0">{{ image.attrAlt }}</p>
+        </div>
+        <div class="cell-12">
             <img class="responsive-img" src="{{ constant("DIR_IMAGE") ~ constant("DS") ~ image.path}}" alt="{{ image.alt }}"/>
         </div>
     </div>
