trim done and vabout done

--- a/ui/layout/lHeader.html.twig
+++ b/ui/layout/lHeader.html.twig
@@ -7,4 +7,11 @@
             </a>
         </div>
     </div>
+    <div class="row">
+        <div class="cell-12">
+            <a class="color-orange" href="index.php?o=page&a=about" title="A propos">
+                <span>A propos</span>
+            </a>
+        </div>
+    </div>
 </header>
