drag and drop input file done

--- a/ui/layout/lBase.html.twig
+++ b/ui/layout/lBase.html.twig
@@ -7,6 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Mini Framework PHP">
     <meta name="author" content="Habit Jérémy">
+    <link rel="icon" type="image/x-icon" href="ui/media/favicon.png"/>
     <title>{% block title %}{% endblock %} - Mini Framework</title>
 
     <!-- CSS -->
