--- a/ui/view/image/vOneImage.html.twig
+++ b/ui/view/image/vOneImage.html.twig
@@ -24,7 +24,7 @@
         <div class="cell-12">
             <p class="msg-info marg-0">{{ image.attrAlt }}</p>
         </div>
-        <div class="cell-12">
+        <div class="cell-12 align-center">
             <img class="responsive-img" src="{{ constant("DIR_IMAGE") ~ constant("DS") ~ image.path}}" alt="{{ image.alt }}"/>
         </div>
     </div>
