--- a/ui/view/page/vAbout.html.twig
+++ b/ui/view/page/vAbout.html.twig
@@ -94,7 +94,7 @@
                 <li class="msg-success">
                     Avoir un site responsive.
                 </li>
-                <li class="msg-error">
+                <li class="msg-success">
                     Avoir un gestionnaire d'upload pour les fichiers envoyés sur le serveur
                 </li>
                 <li class="msg-error">
