--- a/ui/view/article/vFormNewUpdate.html.twig
+++ b/ui/view/article/vFormNewUpdate.html.twig
@@ -60,8 +60,7 @@
                 </div>
                 <!-- submit -->
                 <div class="groupform-actions">
-                    <input class="padd-15" type="submit" value="valider" id="submit"/>
-                    <input class="padd-15" type="reset" value="annuler" id="reset"/>
+                    <input class="padd-15" type="submit" value="Valider" id="submit"/>
                 </div>
             </form>
         </div>
