--- a/ui/view/image/vFormNewUpdate.html.twig
+++ b/ui/view/image/vFormNewUpdate.html.twig
@@ -37,13 +37,8 @@
                            maxlength="255"
                            value="{{ image.attrAlt }}"/>
                 </div>
-                <!-- image -->
-                {#  <div class="groupform-large">
-                      <label for="image">Image</label>
-                      {{ imageForm.showMsg('file')|raw }}
-                      <input class="padd-15" type="file" name="image" id="image" accept="image/*"/>
-                  </div>#}
 
+                <!-- image -->
                 <div class="groupform-large">
                     <label for="image">Image</label>
                     {{ imageForm.showMsg('file')|raw }}
@@ -59,8 +54,7 @@
 
                 <!-- submit -->
                 <div class="groupform-actions">
-                    <input class="padd-15" type="submit" value="valider" id="submit"/>
-                    <input class="padd-15" type="reset" value="annuler" id="reset"/>
+                    <input class="padd-15" type="submit" value="Valider" id="submit"/>
                 </div>
             </form>
         </div>
