--- a/ui/view/article/vFormSelect.html.twig
+++ b/ui/view/article/vFormSelect.html.twig
@@ -26,7 +26,7 @@
                     </div>
                     <!-- submit -->
                     <div class="groupform-actions">
-                        <input class="padd-15" type="submit" value="valider" id="submit"/>
+                        <input class="padd-15" type="submit" value="Valider" id="submit"/>
                     </div>
             </form>
         </div>
