--- a/ui/view/image/vFormSelect.html.twig
+++ b/ui/view/image/vFormSelect.html.twig
@@ -16,7 +16,7 @@
                         <label class="required" for="image">Image</label>
                         {{ imageForm.showMsg('errorImage')|raw }}
                         <select class="padd-15" name="image" id="image" required>
-                            <option value="" disabled selected>Choisir un article</option>
+                            <option value="" disabled selected>Choisir une image</option>
                             {% if images is defined %}
                                 {% for image in images %}
                                     <option value="{{ image.id }}">{{ image.name }}</option>
@@ -26,7 +26,7 @@
                     </div>
                     <!-- submit -->
                     <div class="groupform-actions">
-                        <input class="padd-15" type="submit" value="valider" id="submit"/>
+                        <input class="padd-15" type="submit" value="Valider" id="submit"/>
                     </div>
             </form>
         </div>
