form relation article image errors management done and validators list up to speed

--- a/ui/view/article/vFormNewUpdate.html.twig
+++ b/ui/view/article/vFormNewUpdate.html.twig
@@ -66,7 +66,7 @@
                 <!-- images -->
                 <div class="groupform-large">
                     <label for="content">Images</label>
-                    {{ articleForm.showMsg('images')|raw }}
+                    {{ articleForm.showMsg('imageCheckboxes')|raw }}
                     {% if not images is empty %}
                         <div class="row-col-xs flex-vertical-center">
                             {% for image in images %}
